# networking-wireguard

./: .code-workspace  .gitignore  AUTHORS  ChangeLog  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  todo.md  tox.ini
devstack/: local.conf  plugin.sh  settings  test.sh  testcopy.sh
devstack/files/: bindep.txt
etc/neutron/rootwrap.d/: wireguard.filters
networking_wireguard/: constants.py
networking_wireguard/cmd/eventlet/: __init__.py  agent.py
networking_wireguard/ml2/: driver.py  utils.py  wg.py
networking_wireguard/ml2/agent/: utils.py  wg.py  wg_agent.py
networking_wireguard/ml2/mech_driver/: driver.py  rpc.py
networking_wireguard/tests/unit/: base.py  test_mech.py
networking_wireguard/tests/unit/agent/: test_mech_agent.py
networking_wireguard/tests/unit/driver/: test_mech_driver.py  test_wireguard_mech.py
networking_wireguard/tests/unit/mech_driver/: test_driver.py
networking_wireguard/tests/unit/ml2/agent/: test_wg_agent.py
src/ml2/: driver.py  plugin.py  utils.py  wg.py
