[tool.poetry]
name = "networking_wireguard"
version = "0.1.0"
description = "\"Openstack Neutron Plugin to enable Wireguard VPN\""
authors = ["Michael Sherman <shermanm@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
keystoneauth1 = "^4.3.1"
neutron = "^18.0.0"
neutron-lib = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
