[metadata]
name = networking-wireguard
version = attr: src.VERSION
summary = Wireguard Plugin for OpenStack Neutron
description-file = README.md
author = University of Chicago
author-email = contact@chameleoncloud.org
project_urls = {
    'Homepage': "https://www.chameleoncloud.org",
    'Documentation': 'https://chameleoncloud.readthedocs.io',
    'Source': 'https://github.com/ChameleonCloud/networking-wireguard',
},
python_requires = ">=3.6"
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages = [
    "src",
    "src.common",
    "src.l3",
    "src.ml2",
]
