[metadata]
name = networking-wireguard
summary = Wireguard Plugin for OpenStack Neutron
description_file = README.md
author = University of Chicago
author_email = contact@chameleoncloud.org
license = Apache-2
project_urls =
    Homepage = https://www.chameleoncloud.org
    Documentation = https://chameleoncloud.readthedocs.io
    Source = https://github.com/ChameleonCloud/networking-wireguard
python_requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    networking_wireguard
data_files =
    etc/neutron/rootwrap.d = etc/neutron/rootwrap.d/*

[entry_points]
console_scripts =
    neutron-wireguard-agent = networking_wireguard.cmd.eventlet.agent:main
neutron.ml2.mechanism_drivers =
    wireguard = networking_wireguard.ml2.mech_driver.driver:WireguardMechanismDriver
